<resources>
    <string name="app_name">간단한 주키퍼</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="reset">초기화</string>
    <string name="difficulty">난이도 선택</string>
    <string name="easy">초급</string>
    <string name="normal">중급</string>
    <string name="hard">고급</string>
    <string name="hell">최고급</string>
    <string name="총점">총점</string>
    <string name="score">점수</string>
    <string name="grade">등수</string>
    <string name="name">이름</string>
    <string name="close">닫기</string>
    <string name="ok">확인</string>
    <string name="getname">이름을 입력하세요.</string>
    <string name="start">START GAME</string>
    <string name="pick">빈칸을 선택하고 숫자 버튼을 눌러주세요.</string>
    <string name="end">종료</string>
</resources>

